2011-02-10  Ivan Maidanski  <ivmai@mail.ru>

	* dyn_load.c (GC_register_map_entries,
	GC_register_dynamic_libraries_dl_iterate_phdr): Calculate
	DATASTART only once if DATASTART_IS_FUNC.
	* dyn_load.c (GC_register_dynamic_libraries_dl_iterate_phdr):
	Calculate DATAEND only once if DATAEND_IS_FUNC.
	* dyn_load.c: Add comment to some endif; realign some code.
	* dyn_load.c (GC_init_dyld): Don't use
	_dyld_bind_fully_image_containing_address if
	NO_DYLD_BIND_FULLY_IMAGE defined; add FIXME.
	* include/private/gcconfig.h (GC_data_start, GC_find_limit):
	Declare if used by DATASTART/DATAEND, respectively.
	* include/private/gcconfig.h (DATASTART_IS_FUNC, DATAEND_IS_FUNC):
	Define if DATASTART/DATAEND is a function, respectively.
	* include/private/gcconfig.h (GETPAGESIZE, NO_PTHREAD_TRYLOCK,
	NO_DYLD_BIND_FULLY_IMAGE): Define for Darwin/arm as well; include
	unistd.h.

2011-02-10  Ivan Maidanski  <ivmai@mail.ru>

	* os_dep.c (GC_setpagesize, GC_task_self, PROTECT, UNPROTECT):
	Reorder to remove redundant ifdef for Win32.
	* os_dep.c: Add comment to some endif.
	* os_dep.c: Include pthread.h (for Linux even if single-threaded)
	if USE_GET_STACKBASE_FOR_MAIN; also include it for Darwin.
	* os_dep.c (STACKBOTTOM): Redefine for Darwin (unless prohibited
	for some reason).
	* os_dep.c (GC_get_main_stack_base): Allow
	USE_GET_STACKBASE_FOR_MAIN for Linux even if single-threaded; add
	assertion for the returned result.
	* os_dep.c (GC_get_stack_base): Define for Darwin if
	multi-threaded.
	* os_dep.c (GC_page_was_dirty): Reformat the code.
	* os_dep.c: Reformat some comments.
	* os_dep.c (SIG_OK, CODE_OK): Add comment (for FreeBSD).
	* os_dep.c (ID_STOP, ID_RESUME): Define only if threads.
	* os_dep.c (catch_exception_raise): Remove redundant parentheses;
	refine the documentation.

2011-02-10  Ivan Maidanski  <ivmai@mail.ru>

	* NT_MAKEFILE: Define _CRT_SECURE_NO_DEPRECATE for C++ files as
	well.
	* NT_STATIC_THREADS_MAKEFILE: Ditto.